2004-02-05  Rodney Dawes  <dobey@ximian.com>

	* e-task-bar.c: Don't show the task label by default

2004-02-03  Dan Winship  <danw@ximian.com>

	* e-activity-handler.c: 
	* e-activity-handler.h: 
	* e-task-bar.c: 
	* e-task-bar.h: 
	* e-task-widget.c: 
	* e-task-widget.h: Moved here from shell/, since they are now used
	only by the components, not the shell itself.

	* Makefile.am (widgetsinclude_HEADERS,
	libemiscwidgets_la_SOURCES): add new files

2004-02-02  Chris Toshok  <toshok@ximian.com>

	* e-image-chooser.c (set_image_from_data): set
	image_buf/image_buf_size here instead of in all callers.  also
	emit the "changed" signal here.
	(image_drag_data_received_cb): remove the copying to image_buf and
	emitting of "changed" from here.
	(e_image_chooser_set_from_file): only g_free (data) here if
	set_image_from_data failed.
	(e_image_chooser_set_image_data): copy the image data we're passed
	before calling set_image_data.  free it if rv == FALSE.

2004-01-30  Chris Toshok  <toshok@ximian.com>

	* e-image-chooser.c (e_image_chooser_init): add an alignment
	around the image.  This might not be enough.  hrm.
	(set_image_from_data): handle the case where there's no image
	(image_height == image_width == 0).
	(e_image_chooser_get_image_data): new function.
	(e_image_chooser_set_image_data): new function.

	* e-image-chooser.h: add prototypes for set/get_image_data.

2004-01-30  Chris Toshok  <toshok@ximian.com>

	* e-image-chooser.[ch]: abstract out the drag and droppable image
	widget from the contact list editor and stick it here.  There's
	some code for a "Browse..." button here but it's not enabled.

	* Makefile.am (widgetsinclude_HEADERS): add e-image-chooser.h.
	(libemiscwidgets_la_SOURCES): add e-image-chooser.c
	
2004-01-30  Jeffrey Stedfast  <fejj@ximian.com>

	* e-filter-bar.c (get_property): Only save the search-bar state OR
	the filter-bar state - decided based on what the search is. If the
	search is an advanced search, then save the filter-bar state,